--- a/public/css/layout.less
+++ b/public/css/layout.less
@@ -9,8 +9,7 @@ div[role=navigation] a {
 	border-radius: 6px;
 	font-size: 1.1em;
 	margin-left: .4em;
-	/* padding: .4em .6em; */
-	padding:.45em .6em .35em;
+	padding:.45em .7em .35em;
 	text-decoration: none;
 	text-transform: uppercase;
 
@@ -182,10 +181,19 @@ h1 {
 		margin-top:1px;
 		padding-left: 78px;
 		cursor:pointer;
+		outline: none;
 	}
+		.accordion > h3.ui-state-default:hover {
+			background-position:0 -100px;
+		}
 	.accordion > h3.expanded,
 	.accordion > h3.ui-state-active {
 		background: url('../images/bg_tab-expanded-services2.png');
+	}
+		.accordion > h3.ui-state-active:hover {
+			background-position:0 0;
+		}
+	.accordion > h3.ui-state-active {
 		outline: none;
 	}
 	.accordion > div {
@@ -247,7 +255,7 @@ h1 {
 		/* padding-left: 120px;
 		padding-right: 120px;
 		padding-top: 60px; */
-		padding-top:10%;
+		padding-top:5%;
 		padding-left:10%;
 		padding-right:10%;
 	}
@@ -288,6 +296,10 @@ h1 {
 			color:rgb(146,205,211);
 		}
 
+	.slide h3 a {
+		color: rgb(255, 255, 255);
+		text-decoration:none;
+	}
 	.slide h3 {
 		color: rgb(255, 255, 255);
 		font-size: 2.2em;
@@ -313,77 +325,89 @@ h1 {
 		}
 
 .infographic {
-		max-width:906px;
-		margin:0 auto;
-		overflow:hidden;
+	max-width:905px;
+	margin:0 auto;
+	overflow:hidden;
+	position:relative;
+}
+	.infographic > img {
+		position:absolute;
+		top:0;
+		left:0;
+		width:98.5%;
 	}
-		.infographic .circle {
-			float:left;
-			width:36%;
-			position:relative;
-			color:#fff;
+	.infographic .circle {
+		float:left;
+		width:36%;
+		position:relative;
+		color:#fff;
+	}
+		.infographic .circle.challenge {
+			margin-right:-4.5%;
+			z-index:2;
 		}
-			.infographic .circle.challenge {
-				margin-right:-4.5%;
-				z-index:2;
+			.infographic .circle.challenge:after,
+			.infographic .circle.result:before {
+				font-size:36px;
+				position:absolute;
+				width:12%;
+				text-align:center;
+				top:50%;
+				margin-top:-.5em;
+				line-height:1;
+				right:1%;
+				font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+				-webkit-font-smoothing:antialiased;
 			}
-				.infographic .circle.challenge:after,
-				.infographic .circle.result:before {
-					font-size:36px;
-					position:absolute;
-					width:12%;
-					text-align:center;
-					top:50%;
-					margin-top:-.5em;
-					line-height:1;
-					right:0;
-					font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-					-webkit-font-smoothing:antialiased;
-				}
-				.infographic .circle.challenge:after {
-					content:"+";
-				}
-				.infographic .circle.result:before {
-					content:"=";
-					right:auto;
-					left:0;
-				}
-			.infographic .circle.solution {
-				z-index:1;
+			.infographic .circle.challenge:after {
+				content:"+";
 			}
-			.infographic .circle.result {
-				margin-left:-4.5%;
-				z-index:2;
+			.infographic .circle.result:before {
+				content:"=";
+				right:auto;
+				left:0;
 			}
-		.infographic .circle .circlecontent {
-			position:absolute;
-			text-align:center;
-			width:70%;
-			top:15%;
-			left:15%;
+		.infographic .circle.solution {
+			z-index:1;
 		}
-		.circlecontent h4 {
-			font-size:1.9em;
-			font-family: "museo", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+		.infographic .circle.result {
+			margin-left:-4.5%;
+			z-index:2;
+		}
+	.infographic .circle .circlecontent {
+		position:absolute;
+		text-align:center;
+		width:66%;
+		top:15%;
+		left:17%;
+	}
+	.circlecontent h4 {
+		font-size:1.9em;
+		font-family: "museo", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+		font-weight: 500;
+		margin-bottom:2em;
+		text-transform:uppercase;
+		letter-spacing:1px;
+		-webkit-font-smoothing:antialiased;
+	}
+	.circlecontent p {
+		color:#fff;
+		line-height:1.41176470588235;
+		font-size:1.7em;
+		-webkit-font-smoothing:antialiased;
+		margin-bottom:1em;
+	}
+		.result .circlecontent h4 {
+			margin-bottom:1.5em;
+		}
+		.result .circlecontent p {
+			font-size:2.4em;
+			line-height:1.1875;
 			font-weight: 100;
-			margin-bottom:2em;
-			text-transform:uppercase;
-			letter-spacing:1px;
 		}
-		.circlecontent p {
-			color:#fff;
-			line-height:1.41176470588235;
-			font-size:1.7em;
-			-webkit-font-smoothing:antialiased;
-			margin-bottom:1em;
+		.resultbig .circlecontent p {
+			font-size:3.2em;
 		}
-			.result .circlecontent h4 {
-				margin-bottom:1.5em;
-			}
-			.result .circlecontent p {
-				font-size:3.2em;
-				line-height:1.1875;
-			}
 
 #contact {
 	background: url('../images/bg_contact-tiled.png');
@@ -583,7 +607,7 @@ a.reveal {
 	}
 		.csheader h2 {
 			font-size:26px;
-			padding-right:75px;
+			padding-right:50px;
 		}
 	.modalheader .title,
 	.modalcontent h3 {
