--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -807,9 +807,7 @@ div[role=navigation] a {
   border-radius: 6px;
   font-size: 1.1em;
   margin-left: .4em;
-  /* padding: .4em .6em; */
-
-  padding: .45em .6em .35em;
+  padding: .45em .7em .35em;
   text-decoration: none;
   text-transform: uppercase;
   -webkit-transition: 0.2s all linear;
@@ -972,10 +970,19 @@ p.subhead {
   margin-top: 1px;
   padding-left: 78px;
   cursor: pointer;
+  outline: none;
+}
+.accordion > h3.ui-state-default:hover {
+  background-position: 0 -100px;
 }
 .accordion > h3.expanded,
 .accordion > h3.ui-state-active {
   background: url('../images/bg_tab-expanded-services2.png');
+}
+.accordion > h3.ui-state-active:hover {
+  background-position: 0 0;
+}
+.accordion > h3.ui-state-active {
   outline: none;
 }
 .accordion > div {
@@ -1036,7 +1043,7 @@ p.subhead {
 		padding-right: 120px;
 		padding-top: 60px; */
 
-  padding-top: 10%;
+  padding-top: 5%;
   padding-left: 10%;
   padding-right: 10%;
 }
@@ -1076,6 +1083,10 @@ p.subhead {
 .modalfooter .slidecount span:first-child {
   color: #92cdd3;
 }
+.slide h3 a {
+  color: #ffffff;
+  text-decoration: none;
+}
 .slide h3 {
   color: #ffffff;
   font-size: 2.2em;
@@ -1100,9 +1111,16 @@ p.subhead {
   margin: 0 3px 10px;
 }
 .infographic {
-  max-width: 906px;
+  max-width: 905px;
   margin: 0 auto;
   overflow: hidden;
+  position: relative;
+}
+.infographic > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 98.5%;
 }
 .infographic .circle {
   float: left;
@@ -1123,7 +1141,7 @@ p.subhead {
   top: 50%;
   margin-top: -0.5em;
   line-height: 1;
-  right: 0;
+  right: 1%;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
 }
@@ -1145,17 +1163,18 @@ p.subhead {
 .infographic .circle .circlecontent {
   position: absolute;
   text-align: center;
-  width: 70%;
+  width: 66%;
   top: 15%;
-  left: 15%;
+  left: 17%;
 }
 .circlecontent h4 {
   font-size: 1.9em;
   font-family: "museo", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 100;
+  font-weight: 500;
   margin-bottom: 2em;
   text-transform: uppercase;
   letter-spacing: 1px;
+  -webkit-font-smoothing: antialiased;
 }
 .circlecontent p {
   color: #fff;
@@ -1168,8 +1187,12 @@ p.subhead {
   margin-bottom: 1.5em;
 }
 .result .circlecontent p {
-  font-size: 3.2em;
+  font-size: 2.4em;
   line-height: 1.1875;
+  font-weight: 100;
+}
+.resultbig .circlecontent p {
+  font-size: 3.2em;
 }
 #contact {
   background: url('../images/bg_contact-tiled.png');
@@ -1372,7 +1395,7 @@ a.reveal {
 }
 .csheader h2 {
   font-size: 26px;
-  padding-right: 75px;
+  padding-right: 50px;
 }
 .modalheader .title,
 .modalcontent h3 {
@@ -1508,9 +1531,14 @@ ul.affiliations li {
     overflow: hidden;
   }
 }
-@media only screen and (max-width: 910px) {
+@media only screen and (max-width: 964px) {
   .slideshowwrapper .slides > img {
     min-height: 390px;
+  }
+}
+@media only screen and (max-width: 926px) {
+  .slideshowwrapper .slides > img {
+    min-height: 420px;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -1539,6 +1567,9 @@ ul.affiliations li {
   .contact-row .six {
     width: 33%;
   }
+  .infographic {
+    background: none;
+  }
   .infographic .circle {
     width: 33%;
     padding-left: 5%;
@@ -1552,7 +1583,7 @@ ul.affiliations li {
   .infographic .circle p {
     color: #737F83;
   }
-  .infographic .circle img {
+  .infographic img {
     display: none;
   }
   .infographic .circle .circlecontent {
@@ -1567,6 +1598,10 @@ ul.affiliations li {
   }
   .infographic .circle p {
     font-size: 1.4em;
+  }
+  .result .circlecontent p {
+    font-weight: normal;
+    line-height: 1.41176470588235;
   }
   .infographic .circle.challenge:after,
   .infographic .circle.result:before {
@@ -1686,20 +1721,24 @@ ul.affiliations li {
     margin-bottom: 1em;
   }
   .section {
-    padding-bottom: 2em;
+    padding-top: 0;
+    padding-bottom: 1px;
     min-height: 0;
   }
+  .section p {
+    margin-bottom: 3em;
+  }
   #intro {
-    padding-top: 2em;
+    padding-top: 3em;
   }
   h2,
   #intro h2 {
     font-size: 4em;
     margin-bottom: 1.6667em;
   }
-  #intro {
-    padding-top: 0;
-  }
+  /* #intro {
+          padding-top: 0;
+      } */
   #about figure {
     margin: 0 auto;
     max-width: 450px;
@@ -1725,16 +1764,34 @@ ul.affiliations li {
     float: none;
   }
 }
+@media only screen and (max-width: 926px) {
+  .slideshowwrapper .slides > img {
+    min-height: 460px;
+  }
+}
 @media only screen and (max-width: 620px) {
   .slide {
     font-size: .8em;
-    padding-top: 5%;
+  }
+  .slidecount {
+    font-size: 28px;
+  }
+  div.orbit-wrapper div.slider-nav {
+    bottom: 42px;
+  }
+  .slideshowwrapper .slides > img {
+    min-height: 390px;
   }
   .csfooter div.slider-nav a.right {
     right: 10px;
   }
   .csfooter div.slider-nav a.left {
     left: 10px;
+  }
+}
+@media only screen and (max-width: 533px) {
+  .slideshowwrapper .slides > img {
+    min-height: 420px;
   }
 }
 @media only screen and (max-width: 480px) {
@@ -1747,6 +1804,9 @@ ul.affiliations li {
   .slidecount.four {
     width: 80%;
     margin-left: -40%;
+  }
+  .slideshowwrapper .slides > img {
+    min-height: 360px;
   }
   div.orbit-wrapper div.slider-nav {
     width: 100%;
@@ -1772,6 +1832,15 @@ ul.affiliations li {
   .mobilehide {
     display: none;
   }
+  #publications .slideshowwrapper .slide {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+@media only screen and (max-width: 439px) {
+  .slideshowwrapper .slides > img {
+    min-height: 460px;
+  }
 }
 @media only screen and (min-width: 768px) {
   .modalheader .twelve.columns {
@@ -1794,7 +1863,9 @@ ul.affiliations li {
   }
   .wrapper {
     position: fixed;
-    height: 1000px;
+    /* height: 1000px; */
+  
+    height: 1075px;
     overflow: hidden;
     top: 88px;
     width: 100%;
@@ -1804,7 +1875,9 @@ ul.affiliations li {
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-    height: 1280px !important;
+    /* height:1280px !important; */
+  
+    height: 1075px !important;
     overflow: hidden;
     top: 0;
     width: 100%;
@@ -1817,7 +1890,9 @@ ul.affiliations li {
   }
   #about {
     z-index: 800;
-    height: 3000px !important;
+    /* height : 3000px !important; */
+  
+    height: 2800px !important;
   }
   #expertise {
     z-index: 700;
@@ -1825,7 +1900,9 @@ ul.affiliations li {
   }
   #services {
     z-index: 600;
-    height: 1680px !important;
+    /* height: 1680px !important; */
+  
+    height: 1425px !important;
   }
   #clients {
     z-index: 500;
