--- a/public/css/mediaqueries.less
+++ b/public/css/mediaqueries.less
@@ -13,8 +13,23 @@
         padding-left: 20px;
         padding-right: 20px;
     }
+    .section {
+        padding-bottom: 6em;
+    }
+    #expertise {
+        padding-bottom:1px;
+    }
     .accordion > h3 {
-        background: url('../images/bg_tab-expanded-services2.png') no-repeat;
+        background: url('../images/bg_modal-head.gif') repeat;
+        height:auto;
+        line-height:1.2;
+        padding-top:1.2em;
+        padding-bottom:1em;
+    }
+    .accordion > h3,
+    .accordion > div {
+        padding-left:2em;
+        padding-right:2em;
     }
     #contact {
         padding-bottom: 0;
@@ -29,6 +44,9 @@
     #services .tabs h3 {
         font-size: 1.5em;
         overflow: hidden;
+    }
+    .contact-row {
+        margin-bottom:3em;
     }
 }
 
@@ -94,13 +112,21 @@
         width:100%;
     }
     .infographic .circle h4 {
-        font-size:1.6em;
+        font-size:1.9em;
     }
     .result .circlecontent h4 {
         margin-bottom:2em;
     }
     .infographic .circle p {
-        font-size:1.4em;
+        font-size:1.5em;
+        margin-bottom:1.5em;
+    }
+    .slideactions {
+        padding-top:3%;
+        padding-bottom:3%;
+    }
+    #trialslideshow {
+        margin-bottom:1em;
     }
     .result .circlecontent p {
         font-weight:normal;
@@ -162,27 +188,54 @@
         max-height: 30px;
     }
     .nav {
-        padding: 0 20px;
+        padding: 0 10px;
         text-align: center;
     }
     .nav div[role=navigation] {
+        display:none;
+    }
+    .nav form {
+        display:block;
+        margin-bottom: 2em;
+    }
+    .nav select,
+    .nav button {
+        display:inline-block;
+        vertical-align:middle;
+        font-size:16px;
+    }
+    .no-js .nav div[role=navigation] {
+        display:block;
         position: static;
         float: none;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
     }
-    .nav div[role=navigation] a {
+    .no-js .nav div[role=navigation] a {
         float: none;
         margin-bottom: 1em;
     }
+    .no-js .nav form {
+        display:none;
+    }
     .section {
         padding-top:0;
-        padding-bottom: 1px;
+        padding-bottom: 1em;
         min-height: 0;
     }
     .section p {
+        margin-bottom:2em;
+        line-height:1.5;
+    }
+    .section h1 {
         margin-bottom:3em;
+    }
+    .section h2 {
+        margin-bottom:1em;
+    }
+    .bubble {
+        margin-bottom:2em;
     }
     #intro {
         padding-top: 3em;
@@ -190,16 +243,22 @@
     h2,
     #intro h2 {
         font-size: 4em;
-        margin-bottom: 1.6667em;
+        margin-bottom: .7em;
     }
     /* #intro {
         padding-top: 0;
     } */
+    #about {
+        padding-bottom:3em;
+    }
     #about figure {
         margin: 0 auto;
         max-width: 450px; /*
         min-height: 0;
         padding-bottom: 0;*/
+    }
+    .accordion {
+        margin-bottom:2em !important;
     }
     .accordion > div ul {
         float: left;
@@ -207,8 +266,17 @@
         margin-right: 5%;
         width: 90%;
     }
+        .accordion > div ul + ul {
+            position:relative;
+            padding-top:0;
+            margin-top:-1em;
+            padding-bottom:1em;
+        }
     .footer #scrolltotop {
         right: 0;
+    }
+    #publications {
+        padding-bottom:3em;
     }
     #contact {
         padding-left: 0;
@@ -216,6 +284,15 @@
     }
     #email {
         float:none;
+    }
+    .reveal-modal.xlarge {
+        width:100%;
+        margin-left:-50%;
+    }
+    .contact-info {
+        height:auto;
+        padding-top:60px !important;
+        padding-bottom:15px !important;
     }
 }
 
@@ -253,9 +330,6 @@
 }
 
 @media only screen and (max-width: 480px) {
-    #services .tabs h3 {
-        font-size: 1.3em;
-    }
     .accordion > div ul {
         float: none;
     }
@@ -293,11 +367,21 @@
         padding-left:0;
         padding-right:0;
     }
+    .contact-info {
+        width:90%;
+    }
 }
 
 @media only screen and (max-width: 439px) {
     .slideshowwrapper .slides > img {
         min-height:460px;
+    }
+}
+
+@media only screen and (max-width: 410px) {
+    #clients .logos .columns img {
+        width:128px;
+        margin:0 5px 11px;
     }
 }
 
@@ -330,6 +414,10 @@
         top: 88px;
         width: 100%;
     }
+        .no-js .wrapper {
+            position:relative;
+            height:auto;
+        }
     .section {
         position: absolute;
         box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); -moz-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
@@ -339,6 +427,11 @@
         top: 0;
         width: 100%;
     }
+        .no-js .section {
+            position:static;
+            height:auto !important;
+        }
+
     .masthead {
         z-index: 999;
     }
@@ -369,4 +462,18 @@
     #contact {
         z-index: 300;
     }
+    .no-js #about,
+    .no-js #expertise,
+    .no-js #services,
+    .no-js #clients {
+        height: auto !important;
+    }
+    .no-js .footer {
+        position:relative;
+    }
+    .no-js .footer #scrolltotop {
+        position:absolute;
+    }
+
+
 }
