--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -830,7 +830,7 @@ h1 {
   display: inline-block;
   font-size: 1.4em;
   line-height: 1;
-  padding: 1.5em 0 1.3em;
+  padding: 4.1em 0 1em;
   width: 18.5em;
 }
 .logo {
@@ -1422,7 +1422,7 @@ a.reveal {
 .modalheader h2 {
   font-size: 33px;
   position: relative;
-  margin-bottom: -5px;
+  margin-bottom: 0;
 }
 .csheader h2 {
   font-size: 26px;
@@ -1440,6 +1440,9 @@ a.reveal {
 }
 .modalheader .twelve {
   padding: 3%;
+}
+.modalheader p {
+  line-height: 1.3;
 }
 .modalcontent {
   font-size: 12px;
@@ -1503,9 +1506,10 @@ ul.affiliations li {
   background-color: #4e6e79;
   -webkit-border-radius: 6px;
   border-radius: 6px;
-  padding: .4em 1em;
+  padding: .7em 1em .6em;
   font-size: 15px;
   text-align: left;
+  line-height: 1.3;
 }
 .csfooter div.slider-nav a {
   width: 26px;
