DD#3 Adding Back to Top button (for >1024) at the bottom of sections

--- a/public/css/mediaqueries.less
+++ b/public/css/mediaqueries.less
@@ -38,7 +38,7 @@
         position: relative;
         bottom: auto; left: auto;
     }
-    .footer #scrolltotop {
+    .footer .scrolltotop {
         position:absolute;
     }
     #services .tabs h3 {
@@ -66,7 +66,7 @@
     .footer p {
         width: 70%;
     }
-    .footer #scrolltotop {
+    .footer .scrolltotop {
         position: absolute;
         right: 20px;
     }
@@ -262,7 +262,7 @@
             margin-top:-1em;
             padding-bottom:1em;
         }
-    .footer #scrolltotop {
+    .footer .scrolltotop {
         right: 0;
     }
     #publications {
@@ -435,7 +435,7 @@
     }
     #expertise {
         z-index: 700;
-        height: 1396px !important;
+        height: 1406px !important;
     }
     #services {
         z-index: 600;
@@ -452,6 +452,9 @@
     #contact {
         z-index: 300;
     }
+    .scrolltotop {
+        display:block;
+    }
     .no-js #about,
     .no-js #expertise,
     .no-js #services,
@@ -461,9 +464,10 @@
     .no-js .footer {
         position:relative;
     }
-    .no-js .footer #scrolltotop {
+    .no-js .footer .scrolltotop {
         position:absolute;
     }
+    
 
 
 }
