--- a/public/css/layout.less
+++ b/public/css/layout.less
@@ -574,10 +574,8 @@ h1 {
 		text-align: left;
 		letter-spacing:1px;
 	}
-	.footer #scrolltotop {
-		position: fixed;
-		bottom: 20px; right: 20px;
-		background: url('../images/scroll-to-top.png') no-repeat top center;
+	.scrolltotop {
+	  background: url('../images/scroll-to-top.png') no-repeat top center;
 		color: rgb(255, 255, 255);
 		display: block;
 		font-size: 1.1em;
@@ -588,6 +586,13 @@ h1 {
 		text-decoration: none;
 		width: 80px;
 		-webkit-font-smoothing:antialiased;
+		position:absolute;
+		bottom: 20px; right: 20px;
+		display:none;
+	}
+	.footer .scrolltotop {
+		display:block;
+		position: fixed;
 	}
 
 /* Reveal modal overlay styles */
