Fixes DD #14 (new logo swap and sizing)

--- a/public/css/mediaqueries.less
+++ b/public/css/mediaqueries.less
@@ -381,12 +381,20 @@
         bottom:0;
         left:40%;
     }
+    .logo {
+        padding-top:25px;
+    }
 }
 @media only screen and (min-width: 769px) {
     #about div.eighteen div.row {
         background: url('../images/bg_figure-tiled.png');
     }
 
+}
+@media only screen and (min-width: 888px) {
+    .logo {
+        padding-top:20px;
+    }
 }
 
 /* Scrolling */
