Added @2x logo, adjusted logo styles for smaller widths [#14]

--- a/public/css/bootstrap.less
+++ b/public/css/bootstrap.less
@@ -128,8 +128,9 @@ img { -ms-interpolation-mode: bicubic; }
     position: relative;
 }
 
-.logo {
-    padding-top: 20px;
+.row .logo {
+    padding-top:20px;
+    max-width:199px;
 }
 
 /*.mainnav { display: block; margin-left: 0; margin-right: 0; max-width: none; padding: 0; text-align: center; width: 100%; }
