--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -241,8 +241,9 @@ img {
 .pageheader .row div {
   position: relative;
 }
-.logo {
+.row .logo {
   padding-top: 20px;
+  max-width: 199px;
 }
 /*.mainnav { display: block; margin-left: 0; margin-right: 0; max-width: none; padding: 0; text-align: center; width: 100%; }
 .mainnav ul { display: inline-block; list-style: none; margin: 0 auto; padding: 0; width: auto; }
@@ -1755,17 +1756,6 @@ ul.affiliations li {
   .pull-ten {
     right: auto;
   }
-  .logo {
-    padding-bottom: 25px;
-    text-align: center;
-  }
-  .logo img {
-    /* Logo is a 640x320 transparent png with the logo centered. This gives us a 320px-wide
-          HiDPI-friendly image, but it's 320px tall on a w<768px display. We constrain the height
-          there at 50% for HiDPI */
-  
-    max-height: 30px;
-  }
   .nav {
     padding: 0 10px;
     text-align: center;
@@ -1866,6 +1856,14 @@ ul.affiliations li {
     padding-bottom: 15px !important;
   }
 }
+@media only screen and (max-width: 768px) {
+  .row .logo {
+    padding-bottom: 25px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 @media only screen and (max-width: 926px) {
   .slideshowwrapper .slides > img {
     min-height: 460px;
@@ -1897,6 +1895,11 @@ ul.affiliations li {
   }
 }
 @media only screen and (max-width: 480px) {
+  .row .logo {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 183px !important;
+  }
   .accordion > div ul {
     float: none;
   }
@@ -1956,8 +1959,9 @@ ul.affiliations li {
     bottom: 0;
     left: 40%;
   }
-  .logo {
+  .row .logo {
     padding-top: 25px;
+    width: 20%;
   }
 }
 @media only screen and (min-width: 769px) {
@@ -1966,7 +1970,7 @@ ul.affiliations li {
   }
 }
 @media only screen and (min-width: 888px) {
-  .logo {
+  .row .logo {
     padding-top: 20px;
   }
 }
