--- a/public/css/layout.less
+++ b/public/css/layout.less
@@ -589,6 +589,7 @@ h1 {
 		position:absolute;
 		bottom: 20px; right: 20px;
 		display:none;
+		z-index:425;
 	}
 	.footer .scrolltotop {
 		display:block;
