--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1369,6 +1369,7 @@ span[itemprop=faxNumber] a {
   bottom: 20px;
   right: 20px;
   display: none;
+  z-index: 425;
 }
 .footer .scrolltotop {
   display: block;
